syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "TagTool.BackendNew.Services.Grpc.Dtos";

package TagToolBackendNew;

message Tag {
  int32 id = 1;
  string text = 2;
}

message Item {
  string type = 3;
  string payload = 4;
}

// The message that unambiguously represents taggable item with associated tags.
// It should be used in replies (does not make sense for requests).
message TaggableItem {
  Item item = 1;
  repeated Tag tags = 2;
}

// The unified error type.
message Error {
  // The error's id.
  int32 errorId = 1;
  // The description of an error.
  string message = 2;
}

// The message that unambiguously represents taggable item with associated tags.
// It should be used in replies (does not make sense for requests).
message TaggedItem {
  string id = 1;
  repeated Tag tags = 2;
}

// Defines single segment of a tag search query.
message TagQueryParam {
  // The segment's state.
  QuerySegmentState state = 1;
  // The tag.
  int32 tagId = 2;

  enum QuerySegmentState {
    // The option indicating that results of search should not contain the tag.
    Exclude = 0;
    // The option indicating that searched item can contain given tag.
    Include = 1;
    // The option indicating that all returned items must contain given tag.
    MustBePresent = 2;
  }
}
